@@ -68,6 +68,11 @@ public class HttpConnection implements Connection {
         return this;
     }
 
+    public Connection maxBodySize(int bytes) {
+        req.maxBodySize(bytes);
+        return this;
+    }
+
     public Connection followRedirects(boolean followRedirects) {
         req.followRedirects(followRedirects);
         return this;
@@ -293,6 +298,7 @@ public class HttpConnection implements Connection {
 
     public static class Request extends Base<Connection.Request> implements Connection.Request {
         private int timeoutMilliseconds;
+        private int maxBodySizeBytes;
         private boolean followRedirects;
         private Collection<Connection.KeyVal> data;
         private boolean ignoreHttpErrors = false;
@@ -301,6 +307,7 @@ public class HttpConnection implements Connection {
 
       	private Request() {
             timeoutMilliseconds = 3000;
+            maxBodySizeBytes = 1024 * 1024; // 1MB
             followRedirects = true;
             data = new ArrayList<Connection.KeyVal>();
             method = Connection.Method.GET;
@@ -315,6 +322,16 @@ public class HttpConnection implements Connection {
         public Request timeout(int millis) {
             Validate.isTrue(millis >= 0, "Timeout milliseconds must be 0 (infinite) or greater");
             timeoutMilliseconds = millis;
+            return this;
+        }
+
+        public int maxBodySize() {
+            return maxBodySizeBytes;
+        }
+
+        public Connection.Request maxBodySize(int bytes) {
+            Validate.isTrue(bytes >= 0, "maxSize must be 0 (unlimited) or larger");
+            maxBodySizeBytes = bytes;
             return this;
         }
 
@@ -444,7 +461,7 @@ public class HttpConnection implements Connection {
                             new BufferedInputStream(new GZIPInputStream(dataStream)) :
                             new BufferedInputStream(dataStream);
 
-                    res.byteData = DataUtil.readToByteBuffer(bodyStream);
+                    res.byteData = DataUtil.readToByteBuffer(bodyStream, req.maxBodySize());
                     res.charset = DataUtil.getCharsetFromContentType(res.contentType); // may be null, readInputStream deals with it
                 } finally {
                     if (bodyStream != null) bodyStream.close();
